Refactor BaseSchema, StringSchema, StringSchemaTest. Add new Check Classes